fix navbar align with flexbox

--- a/src/assets/css/navbar.css
+++ b/src/assets/css/navbar.css
@@ -35,3 +35,18 @@ li.nav-style > a.active {
     color: white;
     background-color: blue;
 }
+
+.nav-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-start {
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-end {
+  display: flex;
+  flex-direction: row;
+}
